OpenVDB Version History
=======================

Version 2.2.0 - In development
    - Modified tools::DualGridSampler so it is more consistent with 
      tools::GridSampler.

 API changes:
    - tools::DualGridSampler is not longer templated to the target grid type,
      and the ValueAccessor is now passed as an argument.

Version 2.1.0 - December 12, 2013
    - Added a small number of Maya nodes, primarily for conversion of geometry
      to and from OpenVDB volumes and for visualization of volumes.
    - Added an initial implementation of level set morphing (with improvements
      to follow soon).
    - Added tools::LevelSetMeasure, which efficiently computes the surface area,
      volume and average mean-curvature of narrow-band level sets, in both
      world and voxel units.  Those quantities are now exposed as intrinsic
      attributes on the Houdini VDB primitive and can be queried using the
      native Measure SOP.
    - tools::Dense now supports the XYZ memory layout used by Houdini and Maya
      in addition to the ZYX layout used in OpenVDB trees. 
    - Improved the performance of masking in the level set filter tool and
      added inversion and scaling of the mask input, so that any scalar-valued
      volume can be used as a mask, not just volumes with a [0, 1] range.
    - Added optional masking to the non-level-set filters, to the grid
      operators (CPT, curl, divergence, gradient, Laplacian, mean curvature,
      magnitude, and normalize) and to the Analysis and Filter SOPs.
    - Added more narrow band controls to the Rebuild Level Set SOP.
    - Improved the accuracy of the level set rebuild tool.
    - Added tools::activate() and tools::deactivate(), which set the active
      states of tiles and voxels whose values are equal to or approximately
      equal to a given value, and added a Deactivate Background Voxels toggle
      to the Combine SOP.
    - Added math::BBox::applyMap() and math::BBox::applyInverseMap(), which 