@@ -36,7 +36,7 @@
 #ifndef OPENVDB_TOOLS_GRID_OPERATORS_HAS_BEEN_INCLUDED
 #define OPENVDB_TOOLS_GRID_OPERATORS_HAS_BEEN_INCLUDED
 
-#include <openvdb/Grid.h>
+#include <openvdb/openvdb.h>// for BoolGrid
 #include <openvdb/math/Operators.h>
 #include <openvdb/util/NullInterrupter.h>
 #include <openvdb/tree/LeafManager.h>
